fixed landing img on ios

--- a/ecomerce/src/App.scss
+++ b/ecomerce/src/App.scss
@@ -55,6 +55,12 @@ $light-gray : rgba(250, 248, 248, 0.603);
 }
 .Home{
   overflow: hidden;
+  @supports (-webkit-touch-callout:none){
+      .landing{
+        background: center top no-repeat scroll ;
+        background-size: auto 100%;
+      }
+    }
   .landing{ 
       height: 100vh;
       min-height: 300px;
@@ -64,12 +70,7 @@ $light-gray : rgba(250, 248, 248, 0.603);
       background-position: center;
       background-repeat: no-repeat;
       margin:  0 0 5rem;
-      @supports (-webkit-touch-callout:none){
-      .image{
-        background: center top no-repeat scroll ;
-        background-size: auto 100%;
-      }
-    }
+      
     .container{
       position:absolute;
       top: 35%;
